# haskell-java-bridge-fork

./: README.md  java-bridge.cabal
examples/calculator/: calculator.cabal
examples/calculator/src/: calculator.hs
examples/system-properties/: Makefile  system-properties.hs
hs2j/: Common.hs  Haskell2Java.hs  Main.hss  Options.hs
j2hs/: Java2Haskell.hss  Main.hss  Options.hs
src/: ffijni.c
src/Foreign/: Java.cpphs
src/Foreign/Java/: Bindings.hss  JavaMonad.hs  Tutorial.hs  Types.hs  Util.hs
src/Foreign/Java/Bindings/: Haskell2Java.hss  HaskellTypes.hs  Java2Haskell.hss  JavaSE6.hs  JavaTypes.hs  ReflectHaskell.hs  ReflectJava.hs  Support.cpphs  Typomatic.hs
src/Foreign/Java/JNI/: Types.hs  core.hs
